# suitesparse-metis-for-windows

./: CMakeLists.txt
SuiteSparse/metis-5.1.0/: CMakeLists.txt
SuiteSparse/metis-5.1.0/libmetis/: CMakeLists.txt
